refactor: Improves conversion methods for `User` and `UserDTO` and others